--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.10",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
